@@ -39,6 +39,7 @@ include(TestBigEndian)
 
 check_include_files("byteswap.h"         HAVE_BYTESWAP_H)
 check_include_files("inttypes.h"         HAVE_INTTYPES_H)
+check_include_files("glob.h"             HAVE_GLOB_H)
 check_include_files("io.h"               HAVE_IO_H)
 #check_include_files("ltdl.h"             HAVE_LTDL_H) # no plug-ins as yet
 check_include_files("stdint.h"           HAVE_STDINT_H)
@@ -76,6 +77,7 @@ if (NOT HAVE_LAME_LAME_H)
   optional(HAVE_LAME_LAME_H lame.h mp3lame lame_init mp3)
 endif (NOT HAVE_LAME_LAME_H)
 optional(HAVE_MAGIC magic.h magic magic_open "")
+optional(HAVE_OGG_SPEEX speex/speex.h speex speex_decoder_init speex)
 optional(HAVE_PNG png.h png png_set_rows spectrogram)
 optional(HAVE_SAMPLERATE_H samplerate.h samplerate src_simple rabbit)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open sndfile)
