@@ -146,7 +146,7 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h unistd.h byteswap.h sys/time.h sys/timeb.h sys/types.h sys/utsname.h)
 
 dnl Checks for library functions.
-AC_CHECK_FUNCS(strcasecmp strdup popen vsnprintf gettimeofday)
+AC_CHECK_FUNCS(strcasecmp strdup popen vsnprintf gettimeofday glob)
 
 dnl Check if math library is needed.
 AC_CHECK_FUNC(pow)
