@@ -11,6 +11,7 @@
 #cmakedefine HAVE_GETTIMEOFDAY        1
 #cmakedefine HAVE_ID3TAG              1
 #cmakedefine HAVE_INTTYPES_H          1
+#cmakedefine HAVE_GLOB_H              1
 #cmakedefine HAVE_IO_H                1
 #cmakedefine HAVE_LAME_LAME_H         1
 #cmakedefine HAVE_LIBAO               1
@@ -19,6 +20,7 @@
 #cmakedefine HAVE_MAD_H               1
 #cmakedefine HAVE_MP3                 1
 #cmakedefine HAVE_MAGIC               1
+#cmakedefine HAVE_OGG_SPEEX           1
 #cmakedefine HAVE_OGG_VORBIS          1
 #cmakedefine HAVE_POPEN               1
 #cmakedefine HAVE_PNG                 1
